[package]
name = "contract"
description = "Simple Pay to Sign"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4.3"
near-sdk = { version = "5.7.0", features = ["schemars"]}
schemars = { version = "0.8" }
serde = "1.0.208"
omni-transaction = "0.1.3"
ripemd = "0.1.3"
base58ck = "0.2.0"

[dev-dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
